# garagem-dw

back/: pyproject.toml
back/app/: admin.py
back/app/migrations/: 0001_initial.py  0002_carpic_carro_pic.py  0003_alter_carro_pic.py
back/app/models/: __init__.py  carPic.py  carro.py  marca.py
back/app/serializers/: __init__.py  acessorio.py  carro.py  categoria.py  cor.py  marca.py
back/app/views/: __init__.py  carro.py  categoria.py  cor.py  marca.py
back/config/: settings.py  urls.py
back/usuario/: admin.py  forms.py  managers.py  models.py  views.py
back/usuario/functions/: __init__.py  login.py  register.py
back/usuario/migrations/: 0001_initial.py  0002_remove_usuario_cpf_remove_usuario_data_nascimento_and_more.py
front/: README.md  package-lock.json  package.json
front/src/: App.vue  main.js
front/src/api/: itens.js  user.js
front/src/assets/: main.css
front/src/components/Forms/: AcessorioAdd.vue  CarAdd.vue  CategoriaAdd.vue  CorAdd.vue  MarcaAdd.vue
front/src/components/Home/: Header.vue  Menu.vue
front/src/components/Login/: LoginForm.vue  RegisterForm.vue
front/src/router/: index.js
front/src/stores/: itens.js  user.js
front/src/views/: HomeView.vue  LoginView.vue
front/src/views/Itens/: AcessoriosView.vue  CarrosView.vue  CategoriasView.vue  CoresView.vue  MarcasView.vue
